# prisim_iq

./: .cursorignore  .gitignore  Makefile  README.md  SETUP.md  package.json
backend/: .env.example  README.md  pyproject.toml
backend/data/: dynamic_pricing.xlsx  eda_summary.json
backend/data/cards/: decision_tree_model_card.json  dynamic_pricing_data_card.json  linear_regression_model_card.json  xgboost_model_card.json
backend/data/cards/markdown/: decision_tree_model_card.md  dynamic_pricing_data_card.md  linear_regression_model_card.md  xgboost_model_card.md
backend/data/evidence/: honeywell_mapping.json  methodology.json
backend/data/models/: feature_info.json  metrics.json
backend/scripts/: __init__.py  generate_cards.py  generate_training_data.py
backend/src/: __init__.py  config.py  main.py
backend/src/agent/: __init__.py  agent.py  context.py  streaming.py  utils.py
backend/src/agent/prompts/: __init__.py  system.py
backend/src/agent/tools/: __init__.py  data_tools.py  doc_tools.py  pricing_tools.py
backend/src/api/: __init__.py  dependencies.py
backend/src/api/middleware/: __init__.py  logging.py  timing.py
backend/src/api/routers/: __init__.py  chat.py  data.py  evidence.py  explain.py  external.py  health.py  pricing.py  sensitivity.py
backend/src/explainability/: __init__.py  decision_trace.py  feature_importance.py  importance_service.py  shap_explainer.py
backend/src/ml/: __init__.py  demand_simulator.py  model_manager.py  preprocessor.py  price_optimizer.py  segmenter.py  training.py  training_data.py
backend/src/ml/config/: elasticity.yaml
backend/src/orchestrator/: __init__.py  state.py
backend/src/policy/: rules.py
backend/src/rules/: __init__.py  config.yaml  engine.py
backend/src/schemas/: __init__.py  chat.py  data.py  evidence.py  explainability.py  explanation.py  external.py  health.py  market.py  optimization.py  pricing.py  segment.py  sensitivity.py
backend/src/services/: __init__.py  explanation_service.py  external_service.py  pricing_service.py  sensitivity_service.py  traced_pricing.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: __init__.py
backend/tests/unit/: __init__.py  test_evidence_rendering.py  test_health.py
docs/: architecture.md  (+2 more)
(+273 files in other folders)
